blockml/test/errors/03_view/e285/v1.view
view: v1
derived_table: |
  SELECT ${a.dim1}
  FROM 
    ${v2 AS a}
fields:
- dimension: dim1
  sql: a.dim1